<resources>
    <string name="app_name">Personal App</string>
    <string name="profile_image">My Profile Image</string>
    <string name="email">Email</string>
    <string name="email_description">Type your email address</string>
    <string name="username">Username</string>
    <string name="profile_name">Delowar Hossain</string>
    <string name="father_name">Father Name</string>
    <string name="mother_name">Mother Name</string>
    <string name="nationality">Nationality</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="hobby">Hobby</string>
    <string name="short_bio">Short Bio</string>
    <string name="dashboard">Dashboard</string>
    <string name="favourite">Favourite</string>
    <string name="social">Social Media</string>
    <string name="others">Others</string>
    <string name="share">Share</string>
    <string name="exit">Exit</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>
    <string name="my_profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="privacy">Your data is protected by our privacy protection. For the usage of your data across the devices, we use our terms and conditions.</string>
    <string name="weather">Weather</string>
    <string name="local_hotel">Local Hotel</string>
    <string name="restaurant">Restaurant</string>
    <string name="car">Car</string>
    <string name="bus">Bus</string>
    <string name="bike">Bike</string>
    <string name="direction">Direction</string>
    <string name="login">Login</string>
    <string name="empty_account">Don\'t have an account!</string>
    <string name="register_here">Register Here</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="gender_select">Please choose your gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="terms_check">By Creating an account, you agree to our Terms and Conditions.</string>
    <string name="register_now">Register Now</string>
    <string name="fill_information">Please fill up your extra information:</string>
    <string name="recovery_email">Recovery Email</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="restaurant">Restaurant</string>
</resources>
