<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient"
    tools:context=".LogIn">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <!--Rounded background xml used for rounded design-->
    <EditText
        android:id="@+id/usernameId"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/ic_action_user"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:layout_marginBottom="30dp"
        android:layout_above="@+id/passwordId"
        android:layout_centerHorizontal="true"
        android:textColor="#580505"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/passwordId"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/ic_action_password"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:layout_marginBottom="130dp"
        android:layout_alignBottom="@+id/loginView"
        android:layout_alignStart="@+id/usernameId" />

    <!--Cardview used for login button and and onClick implemented-->
    <android.support.v7.widget.CardView
        android:layout_width="150dp"
        android:layout_height="50dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        android:id="@+id/loginView"
        android:layout_marginBottom="31dp"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:onClick="logInClick">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login"
                android:textColor="#fff"
                android:textSize="18sp" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <ProgressBar
        android:id="@+id/simpleProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/passwordId"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_account"
        android:textColor="#000000"
        android:layout_above="@+id/registerId"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp" />

    <!--Taking another TextView for Register Activity and onClick applied-->
    <TextView
        android:id="@+id/registerId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_here"
        android:textColor="#000000"
        android:clickable="true"
        android:focusable="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/linearLayout"
        android:onClick="registerClick"
        android:textColorLink="#ff2600"
        />

    <!--Child View group for Social Media button-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imageView"
        android:id="@+id/linearLayout">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/twitter" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            app:srcCompat="@drawable/instagram" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            app:srcCompat="@drawable/facebook" />
    </LinearLayout>

</RelativeLayout>